@@ -6,8 +6,16 @@ SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")
 
+
 PROJECT (LOGGER)
 
 SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/logger)
+
+ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")
+
+
+PROJECT (BOT)
+
+SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bot)
 
 ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}")
