@@ -1,0 +1,5 @@
+INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
+
+ADD_EXECUTABLE(bot bot.cpp)
+
+TARGET_LINK_LIBRARIES(bot)
