@@ -1,0 +1,10 @@
+#include "Esfera.h"
+#include "Raqueta.h"
+
+class DatosMemCompartida
+{
+public:
+	Esfera esfera;
+	Raqueta raqueta;
+	int accion; //1 arriba, 0 nada, -1 abajo
+};
