@@ -1,4 +1,4 @@
 		
-ADD_EXECUTABLE(logger logger.c)
+ADD_EXECUTABLE(logger logger.cpp)
 
 TARGET_LINK_LIBRARIES(logger)
